--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,32 @@
     <script src="javascripts/client.js"></script>
   </head>
   <body>
-    <div style="width: 800px; height: 600px" id="map"></div>
+    <div class="navbar">
+      <span class="title">Transit Data Dashboard</span>
+      <a href="#mapTab">Map</a>
+      <a href="#dataTab">Data</a>
+    </div>
+    
+    <div class="page">
+      <div class="tab tab-active" id="mapTab">
+        <div style="width: 800px; height: 600px" id="map"></div>
+      </div>
+      <div class="tab" id="dataTab">
+        <table>
+          <thead>
+            <tr>
+              <td><a href="#" class="sortBtn" name="agency">Agency</a></td>
+              <td><a href="#" class="sortBtn" name="metro">Metro Area</a></td>
+              <td><a href="#" class="sortBtn" name="ridership">Annual Ridership</a></td>
+              <td><a href="#" class="sortBtn" name="passengerMiles">Annual Passenger Miles</a></td>
+              <td><a href="#" class="sortBtn" name="population">Service Area Population</a></td>
+              <td><a href="#" class="sortBtn" name="googleGtfs">Google Transit</a></td>
+              <td><a href="#" class="sortBtn" name="publicGtfs">Public GTFS</a></td>
+            </tr>
+          </thead>
+          <tbody id="data">
+          </tbody>
+        </table>
+    </div>
   </body>
 </html>
