more proper pagination.

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
           <tbody id="data">
           </tbody>
         </table>
+        <a href="#" id="prevPage">Previous page</a> <a href="#" id="nextPage">Next page</a>
     </div>
   </body>
 </html>
