--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,10 @@
                 <tbody id="data">
                 </tbody>
               </table>
+
               <a href="#" id="prevPage">Previous page</a> <a href="#" id="nextPage">Next page</a>
+              <div class="clear" ></div>
+
             </div>
           </div>
         </div>
