nice buttons for prev/next.

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                 </tbody>
               </table>
 
-              <a href="#" id="prevPage">Previous page</a> <a href="#" id="nextPage">Next page</a>
+              <button class="btn" id="prevPage">Previous page</a> <button class="btn" id="nextPage">Next page</a>
               <div class="clear" ></div>
 
             </div>
