--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,13 @@
             </div>
             
             <div class="tab-pane fade" id="dataTab">
+
+              <form id="filterForm">
+                <input type="text" value="New filter" />
+              </form>
+
+              <div id="filters"></div>
+
               <table>
                 <thead class="fixed-head">
                   <tr>
