--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
                 </tbody>
               </table>
 
+              (page <span id="pageNum"></span>)
               <button class="btn" id="prevPage">Previous page</a> <button class="btn" id="nextPage">Next page</a>
               <div class="clear" ></div>
 
