--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,13 @@
                   </tr>
                 </thead>
                 <tbody id="data">
+                  <tr id="loading">
+                    <td></td>
+                    <td colspan="5">
+                      Loading data...
+                    </td>
+                    <td></td>
+                  </tr>
                 </tbody>
               </table>
 
