--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,15 @@
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     Filters
+                    <span class="hidden508">(Dropdown menu)</span>
                     <b class="caret"></b>
                   </a>
+
                   <ul class="dropdown-menu" id="filters">
-                    <!-- the opposite= attribute tells the code to un-toggle that if this is toggled -->
+                    <span class="hidden508">Begin Dropdown Menu</span>
+
+                    <!-- the opposite= attribute tells the code to un-toggle that if this is 
+                         toggled -->
                     <li>
                       <a href="#" name="publicGtfs" opposite="noPublicGtfs">
                         <span class="ui-icon ui-icon-blank"></span>Public GTFS
@@ -58,23 +63,51 @@
                         <span class="ui-icon ui-icon-blank"></span>No Public GTFS
                       </a>
                     </li>
+                    <span class="hidden508">End Dropdown Menu</span>
                   </ul>
                   <div class="clear"></div>
+
                 </li>
+                
+                <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    Download Data
+                    <span class="hidden508">(Dropdown menu)</span>
+                    <b class="caret"></b>
+                  </a>
+
+                  <ul class="dropdown-menu">
+                    <span class="hidden508">Begin Dropdown Menu</span>
+                    <li><a href="/api/ntdagencies/agencies?as=CSV">CSV</a></li>
+                    <li><a href="/api/ntdagencies/agencies?as=JSON">JSON</a></li>
+                    <span class="hidden508">End Dropdown Menu</span>
+                  </ul>
+
               </ul>
 
               <table>
                 <thead class="fixed-head">
                   <tr>
-                    <td><a href="#" class="sortBtn" name="name">Agency</a></td>
-                    <td><a href="#" class="sortBtn" name="metro">Metro Area</a></td>
-                    <td><a href="#" class="sortBtn" name="ridership">Annual Ridership</a></td>
-                    <td><a href="#" class="sortBtn" name="passengerMiles">
+                    <td><a href="#" class="sortBtn" name="name" rel="tooltip" 
+                           title="The name of the agency">Agency</a></td>
+                    <td><a href="#" class="sortBtn" name="metro" rel="tooltip"
+                           title="The metropolitan area where the agency provides service">
+                        Metro Area</a></td>
+                    <td><a href="#" class="sortBtn" name="ridership" rel="tooltip"
+                           title="The number of annual unlinked passenger trips on the agency">
+                        Annual Ridership</a></td>
+                    <td><a href="#" class="sortBtn" name="passengerMiles" rel="tooltip"
+                           title="The number of annual passenger miles provided by the agency">
                         Annual Passenger Miles</a></td>
-                    <td><a href="#" class="sortBtn" name="population">
+                    <td><a href="#" class="sortBtn" name="population" rel="tooltip"
+                           title="The population of the area the agency serves">
                         Service Area Population</a></td>
-                    <td><a href="#" class="sortBtn" name="googleGtfs">Google Transit</a></td>
-                    <td><a href="#" class="sortBtn" name="publicGtfs">Public GTFS</a></td>
+                    <td><a href="#" class="sortBtn" name="googleGtfs" rel="tooltip"
+                           title="Does the agency provide GTFS data to Google Transit?">
+                        Google Transit</a></td>
+                    <td><a href="#" class="sortBtn" name="publicGtfs" rel="tooltip"
+                           title="Does the agency provide open GTFS data to the public">
+                        Public GTFS</a></td>
                   </tr>
                 </thead>
                 <tbody id="data">
