--- a/public/index.html
+++ b/public/index.html
@@ -121,8 +121,11 @@
                 </tbody>
               </table>
 
-              (page <span id="pageNum"></span>)
-              <button class="btn" id="prevPage">Previous page</a> <button class="btn" id="nextPage">Next page</a>
+              <div class="pagination" id="page">
+                <ul>
+                </ul>
+              </div>
+
               <div class="clear" ></div>
 
             </div>
