Add back tab id.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <div class="container">
           <a class="brand" href="#">Transit Data Dashboard</a>
           <ul class="nav">
-            <li class="active"><a href="#mapTab" data-toggle="tab">Map</a></li>
+            <li class="active"><a href="#mapTab" data-toggle="tab" id="mapTabToggle">Map</a></li>
             <li><a href="#dataTab" data-toggle="tab">Data</a></li>
           </ul>
         </div>
