Syntactically and semantically correct use of <th> and <td>

--- a/public/index.html
+++ b/public/index.html
@@ -86,28 +86,28 @@
               </ul>
 
               <table>
-                <thead class="fixed-head">
+                <thead>
                   <tr>
-                    <td><a href="#" class="sortBtn" name="name" rel="tooltip" 
-                           title="The name of the agency">Agency</a></td>
-                    <td><a href="#" class="sortBtn" name="metro" rel="tooltip"
+                    <th><a href="#" class="sortBtn" name="name" rel="tooltip" 
+                           title="The name of the agency">Agency</a></th>
+                    <th><a href="#" class="sortBtn" name="metro" rel="tooltip"
                            title="The metropolitan area where the agency provides service">
-                        Metro Area</a></td>
-                    <td><a href="#" class="sortBtn" name="ridership" rel="tooltip"
+                        Metro Area</a></th>
+                    <th><a href="#" class="sortBtn" name="ridership" rel="tooltip"
                            title="The number of annual unlinked passenger trips on the agency">
-                        Annual Ridership</a></td>
-                    <td><a href="#" class="sortBtn" name="passengerMiles" rel="tooltip"
+                        Annual Ridership</a></th>
+                    <th><a href="#" class="sortBtn" name="passengerMiles" rel="tooltip"
                            title="The number of annual passenger miles provided by the agency">
-                        Annual Passenger Miles</a></td>
-                    <td><a href="#" class="sortBtn" name="population" rel="tooltip"
+                        Annual Passenger Miles</a></th>
+                    <th><a href="#" class="sortBtn" name="population" rel="tooltip"
                            title="The population of the area the agency serves">
-                        Service Area Population</a></td>
-                    <td><a href="#" class="sortBtn" name="googleGtfs" rel="tooltip"
+                        Service Area Population</a></th>
+                    <th><a href="#" class="sortBtn" name="googleGtfs" rel="tooltip"
                            title="Does the agency provide GTFS data to Google Transit?">
-                        Google Transit</a></td>
-                    <td><a href="#" class="sortBtn" name="publicGtfs" rel="tooltip"
+                        Google Transit</a></th>
+                    <th><a href="#" class="sortBtn" name="publicGtfs" rel="tooltip"
                            title="Does the agency provide open GTFS data to the public">
-                        Public GTFS</a></td>
+                        Public GTFS</a></th>
                   </tr>
                 </thead>
                 <tbody id="data">
@@ -154,23 +154,23 @@
           <h3 id="agencyName"></h3>
           <table>
             <tr>
-              <td>URL</td>
+              <th>URL</th>
               <td id="agencyUrl"></td>
             </tr>
             <tr>
-              <td title="ID in the National Transportation Dataset">NTD ID</td>
+              <th title="ID in the National Transportation Dataset">NTD ID</th>
               <td id="agencyNtdId"></td>
             </tr>
             <tr>
-              <td>Annual unlinked trips</td>
+              <th>Annual unlinked trips</th>
               <td id="agencyRidership"></td>
             </tr>
             <tr>
-              <td>Annual passenger miles</td>
+              <th>Annual passenger miles</th>
               <td id="agencyPassengerMiles"></td>
             </tr>
             <tr>
-              <td>Service area population</td>
+              <th>Service area population</th>
               <td id="agencyPopulation">
             </tr>
           </table>
