Style it to look nice.

--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,9 @@
                            title="Does the agency provide open GTFS data to the public">
                         Public GTFS</a></th>
                   </tr>
+
+                  <!-- clear the floating sort indicators -->
+                  <div class="clear" ></div>
                 </thead>
                 <tbody id="data">
                   <tr id="loading">
@@ -126,9 +129,6 @@
                 <ul>
                 </ul>
               </div>
-
-              <div class="clear" ></div>
-
             </div>
           </div>
         </div>
