more static fixes.

--- a/public/index.html
+++ b/public/index.html
@@ -79,8 +79,8 @@
 
                   <ul class="dropdown-menu">
                     <span class="hidden508">Begin Dropdown Menu</span>
-                    <li><a href="/api/ntdagencies/agencies?as=CSV">CSV</a></li>
-                    <li><a href="/api/ntdagencies/agencies?as=JSON">JSON</a></li>
+                    <li><a href="api/ntdagencies/agencies/CSV">CSV</a></li>
+                    <li><a href="api/ntdagencies/agencies/JSON">JSON</a></li>
                     <span class="hidden508">End Dropdown Menu</span>
                   </ul>
 
