Fix #7 using votecounter app.

--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,9 @@
                     <th><a href="#" class="sortBtn" name="publicGtfs" rel="tooltip"
                            title="Does the agency provide open GTFS data to the public">
                         Public GTFS</a></th>
+                    <th><a href="#" class="sortBtn" name="votes" rel="tooltip" 
+                    	   title="Number of votes for release of data">
+                    	Votes</a></th>
                   </tr>
 
                   <!-- clear the floating sort indicators -->
