Add Google Transit info to the agency detail page.

--- a/public/index.html
+++ b/public/index.html
@@ -177,6 +177,10 @@
               <td id="agencyUrl"></td>
             </tr>
             <tr>
+                <th title="Whether or not this agency is on Google Transit">Google Transit</th>
+                <td id="agencyGoogle"></td>
+            </tr>        
+            <tr>
               <th title="ID in the National Transportation Dataset">NTD ID</th>
               <td id="agencyNtdId"></td>
             </tr>
