alt text fixes.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Metro Area Client</title>
+    <title>Transit Data Dashboard</title>
     <link rel="stylesheet" href="javascripts/leaflet/leaflet.css" />
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="javascripts/leaflet/leaflet.ie.css" />
@@ -19,8 +19,10 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand toplogo" href="http://www.openplans.org/"><img src="images/openplans.png" alt="OpenPlans" /></a>
-          <a class="brand title" href="#">Transit Data Dashboard</a>
+          <a class="brand toplogo" href="http://www.openplans.org/" title="OpenPlans">
+            <img src="images/openplans.png" alt="OpenPlans" />
+          </a>
+          <a class="brand title">Transit Data Dashboard</a>
           <ul class="nav">
             <li class="active"><a href="#mapTab" class="tabButton" data-toggle="tab" 
                                   id="mapTabToggle">Map</a></li>
