make send feedback a button.

--- a/public/index.html
+++ b/public/index.html
@@ -235,7 +235,7 @@
                 <a href="http://transit.google.com">Google</a>, and the many transit agencies
                 providing open data!
             </p>
-            <p><a href="#feedback" data-toggle="modal">Send feedback</a></p>
+            <p><a class="btn" href="#feedback" data-toggle="modal">Send feedback</a></p>
         </div>
       </div>
     </div>
