--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,8 @@
                 <a href="http://www.openplans.org"><img src="images/openplans-text.png" alt="OpenPlans." /></a>
             </p>
             <p>
-                Data from the <a href="http://www.ntdprogram.gov">National Transit Database</a>, 
+                Data from <a href="http://www.openstreetmap.org">OpenStreetMap Contributors CC-BY-SA</a>, 
+                the <a href="http://www.ntdprogram.gov">National Transit Database</a>, 
                 the <a href="http://www.census.gov">United States Census</a>, 
                 <a href="http://www.gtfs-data-exchange.com">GTFS Data Exchange</a>, 
                 <a href="http://transit.google.com">Google</a>, and the many transit agencies
