--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,30 @@
       </div>
     </div>
     
-    <div class="container">
+   <div class="container">
+	<div class="hero-unit" id="preamble-before">
+	  <h2>Welcome!</h2>
+	  <p>This is site tracks the availability of open data in the
+	    <abbr class="initialism" title="General Transit Feed
+	    Specification"><a href="https://developers.google.com/transit/gtfs/">GTFS</a></abbr>
+	    format for transit operators in the U.S. and Canada. The
+	    public data listed here will be used to power
+	    OpenPlans&apos; <a href="http://www.kickstarter.com/projects/228865951/transit-app-for-ios-6-and-beyond">upcoming
+	    iOS application</a>, and is available for anyone to
+	    use.</p>
+
+	  <p>Not all communities have <abbr class="initialism"
+	    title="General Transit Feed Specification">GTFS</abbr> and
+	    some choose not to release to the public.</p>
+
+	  <p>Check our database to see if transit operators in your
+	    community publish data to the public. If not, let them
+	    know that open data is important to you by registering
+	    your &ldquo;vote&rdquo;&mdash;we'll use this data to let
+	    operators know that open data is important to their
+	    riders.</p>
+	</div>
+
       <div class="row" id="tabs">
         <div class="span12">
 
