Use official Twitter not AddThis to avoid hash on the end of URL.

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,11 @@
             <li><a href="#dataTab" class="tabButton" data-toggle="tab">Data</a></li>
             <li>
               <span class="shareTop shareTopTweet">
-                <a href="#" class="addthis_button_tweet" 
-                   tw:url="http://transitdata.openplans.org" tw:text="Check out @OpenPlans site tracking open #transpo data"></a>
+                <!--  Not using AddThis because the URL ends up with a hash on the end -->
+                <a href="https://twitter.com/share" class="twitter-share-button" 
+                   data-url="http://transitdata.openplans.org"
+                   data-counturl="http://transitdata.openplans.org"
+                   data-text="Check out @OpenPlans site tracking open #transpo data"></a>
               </span>
             <li>
               <span class="shareTop shareTopLike">
