--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
    <div class="container">
 	<div class="hero-unit" id="preamble-before">
 	  <h2>Welcome!</h2>
-	  <p>This is site tracks the availability of open data in the
+	  <p>This site tracks the availability of open data in the
 	    <abbr class="initialism" title="General Transit Feed
 	    Specification"><a href="https://developers.google.com/transit/gtfs/">GTFS</a></abbr>
 	    format for transit operators in the U.S. and Canada. The
